// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClearNotification should be rendered correctly 1`] = `
<div
  className="notificationWrapper clearButton"
>
  <button
    className="uui-button-box uui-enabled -clickable uui-link_button root uui-size-36 uui-no-left-icon uui-no-right-icon uui-color-primary uui-weight-semibold uui-underline-none"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    <div
      className="uui-caption"
    >
      CLOSE ALL NOTIFICATIONS
    </div>
  </button>
</div>
`;

exports[`ErrorNotification should be rendered correctly 1`] = `
<div
  className="uui-notification_card uui-color-error root"
  role="alert"
>
  <div
    className="mainPath"
  >
    <div
      className="iconWrapper"
    >
      <div
        className="container uui-icon uui-enabled"
        style={Object {}}
      >
        <svg
          className=""
          height={24}
          width={24}
        />
      </div>
    </div>
    <div
      className="content"
    />
    <div
      className="closeWrapper"
    >
      <button
        className="uui-button-box uui-enabled -clickable container uui-icon_button uui-color-neutral root closeIcon"
        onClick={[Function]}
        tabIndex={0}
        type="button"
      >
        <div
          className="container uui-icon uui-enabled"
          style={Object {}}
        >
          <svg
            className=""
          />
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`HintNotification should be rendered correctly 1`] = `
<div
  className="uui-notification_card uui-color-info root"
  role="alert"
>
  <div
    className="mainPath"
  >
    <div
      className="iconWrapper"
    >
      <div
        className="container uui-icon uui-enabled"
        style={Object {}}
      >
        <svg
          className=""
          height={24}
          width={24}
        />
      </div>
    </div>
    <div
      className="content"
    />
    <div
      className="closeWrapper"
    >
      <button
        className="uui-button-box uui-enabled -clickable container uui-icon_button uui-color-neutral root closeIcon"
        onClick={[Function]}
        tabIndex={0}
        type="button"
      >
        <div
          className="container uui-icon uui-enabled"
          style={Object {}}
        >
          <svg
            className=""
          />
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`NotificationCard should be rendered correctly 1`] = `
<div
  className="uui-notification_card uui-color-error root"
  role="alert"
>
  <div
    className="mainPath"
  >
    <div
      className="content"
    />
    <div
      className="closeWrapper"
    >
      <button
        className="uui-button-box uui-enabled -clickable container uui-icon_button uui-color-neutral root closeIcon"
        onClick={[Function]}
        tabIndex={0}
        type="button"
      >
        <div
          className="container uui-icon uui-enabled"
          style={Object {}}
        >
          <svg
            className=""
          />
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`NotificationCard should render with maximum props 1`] = `
<div
  className="uui-notification_card uui-color-error root"
  role="alert"
>
  <div
    className="mainPath"
  >
    <div
      className="iconWrapper"
    >
      <div
        className="container uui-icon uui-enabled"
        style={Object {}}
      >
        <svg
          className=""
          height={24}
          width={24}
        />
      </div>
    </div>
    <div
      className="content"
    />
    <div
      className="closeWrapper"
    >
      <button
        className="uui-button-box uui-enabled -clickable container uui-icon_button uui-color-neutral root closeIcon"
        onClick={[Function]}
        tabIndex={0}
        type="button"
      >
        <div
          className="container uui-icon uui-enabled"
          style={Object {}}
        >
          <svg
            className=""
          />
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`SuccessNotification should be rendered correctly 1`] = `
<div
  className="uui-notification_card uui-color-success root"
  role="alert"
>
  <div
    className="mainPath"
  >
    <div
      className="iconWrapper"
    >
      <div
        className="container uui-icon uui-enabled"
        style={Object {}}
      >
        <svg
          className=""
          height={24}
          width={24}
        />
      </div>
    </div>
    <div
      className="content"
    />
    <div
      className="closeWrapper"
    >
      <button
        className="uui-button-box uui-enabled -clickable container uui-icon_button uui-color-neutral root closeIcon"
        onClick={[Function]}
        tabIndex={0}
        type="button"
      >
        <div
          className="container uui-icon uui-enabled"
          style={Object {}}
        >
          <svg
            className=""
          />
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`WarningNotification should be rendered correctly 1`] = `
<div
  className="uui-notification_card uui-color-warning root"
  role="alert"
>
  <div
    className="mainPath"
  >
    <div
      className="iconWrapper"
    >
      <div
        className="container uui-icon uui-enabled"
        style={Object {}}
      >
        <svg
          className=""
          height={24}
          width={24}
        />
      </div>
    </div>
    <div
      className="content"
    />
    <div
      className="closeWrapper"
    >
      <button
        className="uui-button-box uui-enabled -clickable container uui-icon_button uui-color-neutral root closeIcon"
        onClick={[Function]}
        tabIndex={0}
        type="button"
      >
        <div
          className="container uui-icon uui-enabled"
          style={Object {}}
        >
          <svg
            className=""
          />
        </div>
      </button>
    </div>
  </div>
</div>
`;
